# 2021-HAI-RL-Arena

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  README.md  example_agent.py
cpp/Extension/pyArena/: main.cc
cpp/Extension/pyArena/Includes/pyArena/: Agent.h  Board.h  Types.h
cpp/Extension/pyArena/Sources/: Agent.cc  Board.cc  Types.cc
cpp/Extension/pyArenaPlayer/: README.md  setup.py
cpp/Extension/pyArenaPlayer/pyArenaPlayer/: __main__.py  game.py  manager.py  player_agent.py  utils.py
cpp/Includes/Arena/: Agent.hpp  Board.hpp  Types.hpp
cpp/RandomBot/: main.cc
cpp/Sources/Arena/: Agent.cc  Board.cc  CMakeLists.txt
cpp/UnitTest/: BoardTests.cc  CMakeLists.txt
src/: README.md  example_agent.py  setup.py
src/Extension/pyArena/: CMakeLists.txt
src/Extension/pyArena/Includes/pyArena/: Types.h
src/Extension/pyArena/Sources/: Board.cc
src/Extension/pyArenaPlayer/: README.md  pyrightconfig.json  setup.cfg  setup.py
src/Extension/pyArenaPlayer/pyArenaPlayer/: manager.py  utils.py
src/Includes/Arena/: Agent.hpp  Board.hpp  Types.hpp
src/RandomBot/: CMakeLists.txt
src/Sources/Arena/: Agent.cc  Board.cc
whl/: pyArena-0.0.1-cp38-cp38-linux_x86_64.whl  pyArena-0.0.1-cp38-cp38-win_amd64.whl
